Master (Angular v. 1.0.7) Updated the UI to spell out what version of angular is being used.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,9 @@
 
     <body ng-controller="demoController">
 
+<h1>Angular Table</h1>
+<h3>Angular v1.0.7</h3>
+
         <angular-table model="listOfNumbers" default-sort-column="id" class="demoTable" style="padding-bottom: 1px;">
             <header-row>
                 <header-column sortable="true" sort-field-name="id" class="demoHeaderColumn">
