Angular 1.2.6 - spelled out the explicit version of angular being used.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,8 @@
     </head>
 
     <body ng-controller="demoController">
+      <h1>Angular Table</h1>
+      <h3>Angular v1.2.6</h3>
 
         <angular-table model="listOfNumbers" default-sort-column="id" class="demoTable" style="padding-bottom: 1px;">
             <header-row>
